--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "zsh/src/dircolors-solarized"]
 	path = zsh/src/dircolors-solarized
 	url = https://github.com/seebi/dircolors-solarized
+[submodule "zsh-plugins/zsh-syntax-highlighting"]
+	path = zsh-plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
